# tdhook

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Justfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  roadmap.yml
.github/workflows/: ci.yml
docs/source/: about.rst  conf.py  index.rst  methods.rst  references.bib  start.rst  tutorials.rst
scripts/bench/: README.md  bundle.py  check_accurate.py  get_stats.py  models.py  plot_bundle.py  plot_stats.py  plot_summaries.py  runtime.py  test_measurement.py  test_stats.py  utils.py
scripts/bundle-test/: pyproject.toml
scripts/composition/: attribution_patching.py  concept_attribution.py  concept_probing.py  concept_utils.py
scripts/lczerolens/: concept_probing.py  value_saliency.py
scripts/torchrl/: action_probing.py  value_saliency.py
scripts/xdrl/: value_saliency.py
skills/tdhook/: SKILL.md
src/tdhook/: __init__.py  _optional_deps.py  _types.py  artifacts.py  contexts.py  hooks.py  metrics.py  module.py  modules.py  sources.py
tests/: conftest.py  test_artifacts.py  test_contexts.py  test_hooks.py  test_meta.py  test_metrics.py  test_module.py  test_modules.py
tests/acteng/: test_activation_caching.py  test_probing.py
tests/attribution/: test_gradient.py  test_input_times_gradient.py  test_lrp.py
tests/latent/: test_activation_caching.py  test_activation_patching.py  test_dimension_estimation.py  test_probing.py  test_representation_similarity.py  test_steering_vectors.py
tests/latents/: test_probing.py
(+91 files in other folders)
