[project]
name = "bundle-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7.1",
]

[dependency-groups]
captum = [
    "captum>=0.8.0",
]
nnsight = [
    "nnsight>=0.4.11",
]
pyvene = [
    "pyvene>=0.1.8",
]
transformer-lens = [
    "transformer-lens>=2.16.1",
]
zennit = [
    "zennit>=0.5.1",
]
inseq = [
    "inseq>=0.6.0",
]

[tool.uv]
conflicts = [
    [
      { group = "transformer-lens" },
      { group = "inseq" },
    ],
]
